# keyring

./: Cargo.toml  README.rst  keyring.py  keystore.py  keystore_format.md  keystore_format.rst  mkpasswd.py  term.py
keyring/: __main__.py  keystore.py  keystore_test.py
keyring/store/: __init__.py  base.py  v1_json.py  v2_zip.py
man/: manpage
spec/: contents.json-schema.yaml  password.json-schema.yaml
src/: lib.rs  password.rs  password_generation.rs
