[package]
name = "keyring"
version = "0.2.0"
edition = "2021"

[dependencies]
age = "0.9.2"
anyhow = "1.0.71"
base64 = "0.21.2"
clap = {version = "4.3.4", features = ["derive"]}
console = "0.15.7"
dialoguer = {version = "0.10.4", features = ["fuzzy-select"]}
flate2 = "1.0.26"
opaque-debug = "0.3.0"
rand = "0.8.5"
rpassword = "7.2.0"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
serde_yaml = "0.9.21"
tempfile = "3.6.0"
thiserror = "1.0.40"
unicode-width = "0.1.10"
zip = "0.6.6"

# Otherwise, decrypting in debug builds is really slow.
[profile.dev.package.scrypt]
opt-level = 3
